# electrochemistry

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  run-tests-electrochemistry.sh  setup.py
electrochemistry/: __init__.py  models.py
src/electrochemistry/: __init__.py  data.py  e_implicit_exponential_mesh.cpp  e_implicit_exponential_mesh.hpp  models.py  pints_errors.py  pints_model_adaptor.py  seq_electron_transfer3_explicit.cpp  seq_electron_transfer3_explicit.hpp  utilities.hpp  wrapper.cpp
test/: test_basics.py  test_model.py
